tests/letrecs/ill-typed/bad-letrec.stella
language core;

extend with #letrec-bindings;

fn main(n : Nat) -> Nat {
  return letrec bad = n in if bad then bad else succ(bad);
}
